--- a/app/styles.css
+++ b/app/styles.css
@@ -7,13 +7,13 @@ body {
 h1 {
   color: #253043;
   text-transform: uppercase;
-  font: 700 2em 'Aleo';
+  font-weight: 900;
+  font-family: 'Lato', sans-serif;
   letter-spacing: 0.125em;
 }
 
 h2 {
-   color: #5578af;
-   font-family: 'Lato', Helvetica, sans-serif;
+  font-family: 'Aleo', Helvetica, sans-serif;
 }
 
 h3 {
@@ -23,8 +23,6 @@ h3 {
   font-variant: small-caps;
   font-weight: normal;
   letter-spacing: 0.125em;
-  font-size: 1.25em;
-  line-height: 1.5em;
 }
 
 h4 {
@@ -48,20 +46,6 @@ a {
   text-decoration: none;
 }
 
-#quote {
+blockquote {
   color: #8c6093;
-}
-
-.company {
-  .value {
-    font-family: 'Aleo', serif;
-    font-style: italic;
-    font-size: .875em;
-    color: #9e9e95;
-  }
-}
-
-.date_range {
-  color: #9e9e95;
-  font-size: .875em;
 }
