--- a/app/assets/stroke.css
+++ b/app/assets/stroke.css
@@ -1,13 +1,26 @@
-@keyframes dash {
+@keyframes draw {
   to {
     stroke-dashoffset: 0;
+  }
+}
+
+@keyframes fade {
+  to {
+    opacity: 0.25;
   }
 }
 
 path {
   stroke-dasharray: 1000;
   stroke-dashoffset: 1000;
-  animation: dash 0.5s linear forwards;
+}
+path:nth-last-child(2), path:last-child {
+  animation: draw 2s linear forwards;
+}
+path:not(:nth-last-child(2), :last-child) {
+  animation:
+    draw 2s 1 linear forwards,
+    fade 5s 1 3s linear forwards;
 }
 
 #stroke-0 {
