--- a/app/assets/stroke.css
+++ b/app/assets/stroke.css
@@ -15,12 +15,12 @@ path {
   stroke-dashoffset: 1000;
 }
 path:nth-last-child(2), path:last-child {
-  animation: draw 2s linear forwards;
+  animation: draw 2s 1 0s ease-in forwards;
 }
 path:not(:nth-last-child(2), :last-child) {
   animation:
-    draw 2s 1 linear forwards,
-    fade 5s 1 3s linear forwards;
+    draw 2s 1 0s ease-in forwards,
+    fade 5s 1 2s ease-in forwards;
 }
 
 #stroke-0 {
