--- a/app/assets/stroke.css
+++ b/app/assets/stroke.css
@@ -15,11 +15,11 @@ path {
   stroke-dashoffset: 1000;
 }
 path:nth-last-child(2), path:last-child {
-  animation: draw 2s 1 0s ease-in forwards;
+  animation: draw 2.5s 1 ease-in forwards;
 }
 path:not(:nth-last-child(2), :last-child) {
   animation:
-    draw 2s 1 0s ease-in forwards,
+    draw 2.5s 1 ease-in forwards,
     fade 5s 1 2s ease-in forwards;
 }
 
@@ -27,29 +27,29 @@ path:not(:nth-last-child(2), :last-child) {
   animation-delay: 0.0s;
 }
 #stroke-1 {
-  animation-delay: 0.1s;
-}
-#stroke-2 {
   animation-delay: 0.2s;
 }
-#stroke-3 {
-  animation-delay: 0.3s;
-}
-#stroke-4 {
+#stroke-2 {
   animation-delay: 0.4s;
 }
-#stroke-5 {
-  animation-delay: 0.5s;
-}
-#stroke-6 {
+#stroke-3 {
   animation-delay: 0.6s;
 }
-#stroke-7 {
-  animation-delay: 0.7s;
-}
-#stroke-8 {
+#stroke-4 {
   animation-delay: 0.8s;
 }
+#stroke-5 {
+  animation-delay: 1.0s;
+}
+#stroke-6 {
+  animation-delay: 1.2s;
+}
+#stroke-7 {
+  animation-delay: 1.4s;
+}
+#stroke-8 {
+  animation-delay: 1.6s;
+}
 #stroke-9 {
-  animation-delay: 0.9s;
+  animation-delay: 1.8s;
 }
