--- a/app/styles/grids.less
+++ b/app/styles/grids.less
@@ -12,6 +12,7 @@ lines(3, 6) => 30
 lines(2, 9) => 28.5
 lines(1, 19) => 28.5
 */
+@import "color";
 @dev-module-color: fadeout(@blue, 85%);
 
 .grid(@columns: 3; @modules: 3) {
