--- a/app/styles/media-sizes.less
+++ b/app/styles/media-sizes.less
@@ -1,12 +1,21 @@
-@default-page-width: 46.5rem;
-@default-page-height: 28.5rem;
-@dev-page-color: fadeout(@black, 85%);
+@import "main";
+@import "color";
+@default-page-width: 48rem;
+@default-page-height: 30rem;
+@dev-page-color: fadeout(@black, 93%);
 
 .page(@page-width: @default-page-width;
       @page-height: @default-page-height) {
-  background-color: @dev-page-color;
   width: 100%;
-  min-height: @page-height;
+  // min-height: @page-height;
+}
+
+.page when (@dev) {
+  background-color: @dev-page-color;
+}
+
+.page-background(@page-color) {
+  background-color: @page-color;
 }
 
 body>section, body>main>section {
