--- a/app/styles/layouts/three-qualities.less
+++ b/app/styles/layouts/three-qualities.less
@@ -1,9 +1,28 @@
 section.three-qualities {
   height: 30rem;
+  &:before,
+  &:after {
+    content: "";
+    display: table;
+  }
+  &:after {
+    clear: both;
+  }
+  &>h2 { display: none; }
 }
 section.three-qualities>* {
   margin: 0 auto;
-  width: 46.5rem;
+  width: 48rem;
+  &>h2, h3, h4, h5, p {
+    font-size: 3rem;
+    line-height: 3rem;
+  }
+  &>h3 {
+    font-weight: 400;
+  }
+  &>p {
+    font-weight: 100;
+  }
 }
 section.three-qualities>*>* {
   float: left;
@@ -15,13 +34,20 @@ section.three-qualities>*>* {
   &:after {
     clear: both;
   }
-  margin: 0 1.5rem;
+  margin: 0rem 0.75rem 1.5rem 0.75rem;
+  padding: 0 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url('../images/rectangle.svg');
+  overflow: hidden;
 }
-section.three-qualities>*>:first-of-type {
-  width: 14.5rem;
+section.three-qualities>*>:first-child {
+  margin-left: 0;
+  width: 15rem;
   height: 9rem;
 }
-section.three-qualities>*>:nth-of-type(2) {
-  width: 30.5rem;
+section.three-qualities>*>:last-child {
+  margin-right: 0;
+  width: 31.5rem;
   height: 9rem;
 }
