--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -32,41 +32,31 @@ Conclusion
 @import "color";
 @import "layouts/three-qualities";
 
-@black: #253043;
-
 
 /*
 * DEBUG
 */
 
-@gridline-color: fadeout(@black, 50%);
+@gridline-color: fadeout(@black, 75%);
 
 body {
-  background-position: 18px 12px;
+  background-position: 50% 0;
   background-size: 1.5rem 1.5rem;
   background-image:
     linear-gradient(
       0deg,
-      transparent 24%,
-      @gridline-color 25%,
-      @gridline-color 26%,
-      transparent 27%,
-      transparent 74%,
-      @gridline-color 75%,
-      @gridline-color 76%,
-      transparent 77%,
-      transparent
+      transparent 0%,
+      transparent 98%,
+      @gridline-color 99%,
+      @gridline-color 100%
     ),
-    linear-gradient(90deg,
-      transparent 24%,
-      @gridline-color 25%,
-      @gridline-color 26%,
-      transparent 27%,
-      transparent 74%,
-      @gridline-color 75%,
-      @gridline-color 76%,
-      transparent 77%,
-      transparent
+    linear-gradient(
+      90deg,
+      transparent 48%,
+      @gridline-color 49%,
+      @gridline-color 50%,
+      transparent 51%,
+      transparent 100%
     );
 }
 
