Correct Prairie Twilight colors

--- a/app/styles/color.less
+++ b/app/styles/color.less
@@ -1,17 +1,24 @@
-@tone15: rgb(217, 58, 23);
-@tone20: rgb(216, 45, 26);
-@tone45: rgb(205, 8, 44);
-@tone50: rgb(190, 4, 47);
-@tone60: rgb(75, 4, 57);
-@tone65: rgb(60, 6, 62);
-@tone90: rgb(46, 14, 92);
-@tone95: rgb(46, 15, 98);
-@black: rgb(46, 15, 98);
-@red: rgb(358, 44, 68);
-@orange: rgb(19, 54, 64);
-@yellow: rgb(50, 53, 51);
-@green: rgb(119, 36, 51);
-@cyan: rgb(182, 100, 54);
-@blue: rgb(217, 51, 69);
-@violet: rgb(262, 34, 64);
-@magenta: rgb(289, 33, 61);
+@red: rgb(173, 97, 100);
+@orange: rgb(164, 104, 76);
+@yellow: rgb(131, 119, 62);
+@green: rgb(84, 130, 83);
+@cyan: rgb(0, 133, 138);
+@blue: rgb(85, 120, 175);
+@violet: rgb(129, 109, 164);
+@magenta: rgb(146, 104, 155);
+@tone15: rgb(25, 38, 59);
+@tone20: rgb(37, 49, 67);
+@tone45: rgb(102, 107, 111);
+@tone50: rgb(116, 120, 121);
+@tone60: rgb(144, 145, 140);
+@tone65: rgb(159, 159, 150);
+@tone90: rgb(234, 227, 201);
+@tone95: rgb(250, 241, 212);
+
+@black: @tone20;
+@white: @tone95;
+
+body {
+  background-color: @white;
+  color: @tone50;
+}
