--- a/app/styles/media-sizes.less
+++ b/app/styles/media-sizes.less
@@ -1,27 +1,47 @@
 @import "main";
 @import "color";
-@default-page-width: 48rem;
-@default-page-height: 30rem;
-@dev-page-color: fadeout(@black, 93%);
 
-.page(@page-width: @default-page-width;
-      @page-height: @default-page-height) {
-  width: 100%;
-  // min-height: @page-height;
+@default-page-width: 100%;
+@default-page-height: 30rem;
+@default-page-margin: 0 auto;
+@default-page-background: @white;
+@dev-page-background: fadeout(@black, 93%);
+
+@font-size: 1.875vw;
+
+html { font-size: @font-size; }
+
+@gridline-color: fadeout(@tone60, 50%);
+
+body when (@dev) {
+  background-position: 50% 0;
+  background-size: 1.5rem 1.5rem;
+  background-image:
+    linear-gradient(0deg, transparent 0%, transparent 98%, @gridline-color 99%, @gridline-color 100%),
+    linear-gradient(90deg, transparent 48%, @gridline-color 49%, @gridline-color 50%, transparent 51%, transparent 100%);
+}
+
+.page(@width: @default-page-width;
+      @height: @default-page-height;
+      @background: @default-page-background;
+      @margin: @default-page-margin;) {
+  width: @width;
+  &:before,
+  &:after {
+    content: "";
+    display: table;
+  }
+  &:after {
+    clear: both;
+  }
+  background: @background;
+  min-height: @height;
 }
 
 .page when (@dev) {
-  background-color: @dev-page-color;
+  background: @dev-page-background;
 }
 
-.page-background(@page-color) {
-  background-color: @page-color;
-}
-
-body>section, body>main>section {
-  .page()
-}
-
-body>header, body>footer {
-  .page(@page-height: 7.5rem)
+body>section, body>main>section, body>header, body>footer {
+  .page();
 }
