--- a/app/styles/layouts/three-qualities.less
+++ b/app/styles/layouts/three-qualities.less
@@ -1,17 +1,15 @@
 @import "../main";
 @import "../media-sizes";
+@import "../grids";
 @import "../color";
 
 section.three-qualities {
   .page(@background: @black);
-  padding: 3rem 0;
-  color: @tone60;
   &>h2 { display: none; }
 }
 
 section.three-qualities>* {
-  margin: 0 auto;
-  width: 48rem;
+  .grid();
   &>h2, h3, h4, h5, p {
     font-size: 3rem;
     line-height: 3rem;
@@ -34,8 +32,18 @@ section.three-qualities>*>* {
   &:after {
     clear: both;
   }
-  margin: 0rem 0.75rem 1.5rem 0.75rem;
+  margin: 0rem 0.75rem;
   padding: 0 0;
+  &:first-child {
+    margin-left: 0;
+    width: 15rem;
+    height: 9rem;
+  }
+  &:last-child {
+    margin-right: 0;
+    width: 31.5rem;
+    height: 9rem;
+  }
 }
 
 section.three-qualities>*>* when (@dev) {
@@ -43,15 +51,4 @@ section.three-qualities>*>* when (@dev) {
   background-size: cover;
   background-image: url('../images/rectangle.svg');
   overflow: hidden;
-}
-
-section.three-qualities>*>:first-child {
-  margin-left: 0;
-  width: 15rem;
-  height: 9rem;
-}
-section.three-qualities>*>:last-child {
-  margin-right: 0;
-  width: 31.5rem;
-  height: 9rem;
 }
